@@ -13,10 +13,9 @@ compiled_path = os.path.join(current_dir, 'resources',
 
 class TestJinja2(test_base.BaseTestCase):
     def test_render_template_with_i18n(self):
-        app = webapp2.WSGIApplication(debug=True, config={
+        app = webapp2.WSGIApplication(config={
             'webapp2_extras.jinja2': {
                 'template_path': template_path,
-                'compiled_path': compiled_path,
                 'environment_args': {
                     'autoescape': True,
                     'extensions': [
@@ -36,7 +35,7 @@ class TestJinja2(test_base.BaseTestCase):
         self.assertEqual(res, message)
 
     def test_render_template_globals_filters(self):
-        app = webapp2.WSGIApplication(debug=True, config={
+        app = webapp2.WSGIApplication(config={
             'webapp2_extras.jinja2': {
                 'template_path': template_path,
                 'globals': dict(foo='fooglobal'),
@@ -52,7 +51,7 @@ class TestJinja2(test_base.BaseTestCase):
         self.assertEqual(res, message)
 
     def test_render_template_force_compiled(self):
-        app = webapp2.WSGIApplication(debug=True, config={
+        app = webapp2.WSGIApplication(config={
             'webapp2_extras.jinja2': {
                 'template_path': template_path,
                 'compiled_path': compiled_path,
@@ -68,7 +67,7 @@ class TestJinja2(test_base.BaseTestCase):
         self.assertEqual(res, message)
 
     def test_get_template_attribute(self):
-        app = webapp2.WSGIApplication(debug=True, config={
+        app = webapp2.WSGIApplication(config={
             'webapp2_extras.jinja2': {
                 'template_path': template_path,
             }
@@ -78,7 +77,7 @@ class TestJinja2(test_base.BaseTestCase):
         self.assertEqual(hello('World'), 'Hello, World!')
 
     def test_set_jinja2(self):
-        app = webapp2.WSGIApplication(debug=True)
+        app = webapp2.WSGIApplication()
         self.assertEqual(len(app.registry), 0)
         jinja2.set_jinja2(jinja2.Jinja2(app), app=app)
         self.assertEqual(len(app.registry), 1)
@@ -86,7 +85,7 @@ class TestJinja2(test_base.BaseTestCase):
         self.assertTrue(isinstance(j, jinja2.Jinja2))
 
     def test_get_jinja2(self):
-        app = webapp2.WSGIApplication(debug=True)
+        app = webapp2.WSGIApplication()
         self.assertEqual(len(app.registry), 0)
         j = jinja2.get_jinja2(app=app)
         self.assertEqual(len(app.registry), 1)
